Fix transaction filter dropdown on small screens

--- a/src/components/toolbox/dropdownButton/dropdownButton.css
+++ b/src/components/toolbox/dropdownButton/dropdownButton.css
@@ -8,3 +8,9 @@
     top: calc(100% + 10px);
   }
 }
+
+@media (--small-viewport) {
+  .dropdown {
+    max-width: 670px;
+  }
+}
